Fully Implemented OnCardRole, OffCardRole, SceneCard and add working role tests